<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="disc_anual">Anual</string>
    <string name="disc_semestral">Semestral</string>

    <string name="calc_notas">Calcule suas notas</string>
    <string name="salve_disc">Salve suas disciplinas</string>
    <string name="crie_anot">Crie uma anotação</string>
    <string name="config">Configure o IFCalc</string>


    <string name="app_name">IFCalc</string>
    <string name="version_app">2.2.4</string>
    <string name="develop_by">Desenvolvido por: Caio Vidal</string>
    <string name="website">www.ifcalc.com.br</string>
    <string name="copyright">Todos os direitos reservados</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="materia">Disciplina:</string>
    <string name="b1">1º Bimestre:</string>
    <string name="b2">2º Bimestre:</string>
    <string name="b3">3º Bimestre:</string>
    <string name="b4">4º Bimestre:</string>
    <string name="btcalcular">Calcular</string>
    <string name="result">Resultado: </string>
    <string name="situacao">Situação: </string>
    <string name="situaresult"> </string>
    <string name="textprecisa"> </string>
    <string name="resultadotext"> </string>
    <string name="resultadotext2"> </string>
    <string name="title">Simulador de Notas</string>
    <string name="titleajuda">Ajuda</string>
    <string name="media"></string>
    <string name="mediatext">Média: </string>
    <string name="discicadas"></string>
    <string name="senha">Senha:</string>
    <string name="senhano">Senha novamente:</string>

    <string name="resultError">Você ainda não tem notas suficientes para os cálculos</string>

    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="confirma_excluir">Deseja excluir essa disciplina?</string>
    <string name="confirma_excluir_anotacao">Deseja excluir essa anotação?</string>

    <string name="confirma_refresh">Deseja atualizar suas disciplinas?</string>

    <string name="selecione_opcao">O que deseja fazer?</string>

    <string name="nota100">Nota: 0-100</string>
    <string name="nota10">Nota: 0-10</string>

    <string name="tituloAnotacao">Titulo:</string>
    <string name="corpoAnotacao">Conteudo:</string>

    <string name="semDisciplinas">Você ainda não cadastrou nenhuma disciplina, crie uma agora!</string>
    <string name="semAnotacoes">Você ainda não criou nenhuma anotação, comece agora!</string>


    <string name="menu_about">Sobre</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_settings">Configurações</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">IFCalc</string>
    <string name="title_activity_calculator">Calcule suas Notas</string>
    <string name="title_activity_disciplinas">Disciplinas</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_disciplina_detalhe">DisciplinaDetalheActivity</string>
    <string name="title_activity_anotacoes">Anotações</string>
    <string name="title_activity_anotacao_detalhe">Anotação</string>
    <string name="title_activity_configuracao">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="politica_privacidade">Ao clicar em Importar, você está concordando com a nossa</string>
    <string name="politica_privacidade2"><a href="">política de privacidade.</a></string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_ajuda">Ajuda</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_import_disciplinas">Importar Disciplinas</string>
    <string name="title_activity_politica_privacidade">Política de Privacidade</string>

    <string name="politica_privacidade_parag_1">O IFCalc zela pela segurança dos dados pessoais de seus usuários e respeita a sua privacidade. Ao utilizar a
        funcionalidade de importar Disciplinas por meio do sistema online SUAP, você concordou, voluntariamente, com a nossa política de privacidade abaixo.</string>

    <string name="politica_privacidade_parag_2">1 - Os dados de matricula (login) e senha do usuário ficam salvos APENAS no próprio dispositivo, com
        autorização do usuário para facilitar a atualização de suas notas. Nenhum dado é salvo nos nossos bancos de dados ou em bancos de dados de terceiros.
        </string>

    <string name="politica_privacidade_parag_3">2 - Ao utilizar a funcionalidade de importação, o IFCalc baixa apenas as informações referentes as disciplinas
        do usuário, somente isso. Não utilizamos nome do professores, do aluno, ou qualquer outra informação que o sistema forneça.
        </string>

    <string name="politica_privacidade_parag_4">Caso não concorde com a nossa política de privacidade, por favor, remova o aplicativo do seu smartphone.
        </string>


</resources>