<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sobre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ifcalc.beta.activities.SobreActivity"
    android:background="@drawable/background_sobre"
    tools:showIn="@layout/activity_sobre">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:id="@+id/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/branco"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_name"
            android:layout_marginTop="5dp"
            android:text="@string/version_app"
            android:id="@+id/version_app"
            android:textAlignment="center"
            android:textColor="@color/white_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo_icon"
            android:id="@+id/icon_logo"
            android:layout_below="@+id/version_app"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/icon_logo"
            android:layout_marginTop="20dp"
            android:text="@string/develop_by"
            android:id="@+id/developed_by"
            android:textAlignment="center"
            android:textColor="@color/white_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/developed_by"
            android:layout_marginTop="10dp"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:id="@+id/copyright"
            android:textColor="@color/white_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/copyright"
            android:layout_marginTop="15dp"
            android:text="@string/website"
            android:id="@+id/website"
            android:textAlignment="center"
            android:textColor="@color/white_gray"/>


    </RelativeLayout>

</RelativeLayout>
