<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_disciplina_detalhe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ifcalc.beta.activities.DisciplinaDetalheActivity"
    tools:showIn="@layout/activity_disciplina_detalhe">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true" >

                            <TextView
                                android:id="@+id/textNota"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/nota100"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="#595959" />




                        </LinearLayout>

                    </RelativeLayout>




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textTitulo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/materia"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true" />

                        <EditText
                            android:id="@+id/tituloDisciplina"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:inputType="text"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textbimestre1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/b1"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true" />

                        <EditText
                            android:id="@+id/bimestre1"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:inputType="number"
                            android:layout_alignParentRight="true">


                        </EditText>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textbimestre2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/b2"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true" />

                        <EditText
                            android:id="@+id/bimestre2"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:inputType="number"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/layoutN3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textbimestre3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/b3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"  />

                        <EditText
                            android:id="@+id/bimestre3"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:inputType="number"
                            android:layout_alignParentRight="true"  />

                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/layoutN4">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textbimestre4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/b4"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true" />

                        <EditText
                            android:id="@+id/bimestre4"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:inputType="number"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textprovaf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Prova Final:"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true" />

                        <EditText
                            android:id="@+id/provafinal"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:inputType="number"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultError"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/txtResultError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/resultError"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultShow"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:id="@+id/result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/result"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000000" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp" >

                        <TextView
                            android:id="@+id/situacao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/situacao"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/situaresult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="@string/situaresult"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/mediatext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/mediatext"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/media"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="@string/media"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000000" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp" >

                        <TextView
                            android:id="@+id/textprecisa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/textprecisa"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/resultadotext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/resultadotext"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/resultadotext2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/resultadotext2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
